@@ -122,8 +122,10 @@ CONF.HASH_OPTIMIZE = true
 ##CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
 # CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
 
+##CONF.SORT_BUFFERING_POLICY = {:buffering_class => :NModGroupBy::MergeSortBuffer}
 ##CONF.SORT_SAMPLING_MIN = 100
 ##CONF.SORT_SAMPLING_MAX = 10000
+CONF.SORT_SAMPLING_MAX = 10_0000
 ##CONF.SORT_SAMPLING_RATIO_1_TO = 100
 ##CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 # CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
