@@ -1,3 +1,10 @@
+Sat Sep 11 01:06:24 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* sort.rb, b-sort.rb, n-sort.rb, conf.rb: 新sort対応(REQ#247)
+	* sort18.rb, sort19.rb: 新sortのために改名
+	* n-mod-group-by.rb: DirectOnMemoryBufferでsortした結果をeachする
+	  ようにした.
+
 Fri Sep  3 16:40:39 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* n-group-by.rb, n-mod-group-by.rb: REQ#246対応
